fix colour not showing on some code highlighting

--- a/_sass/code.sass
+++ b/_sass/code.sass
@@ -4,6 +4,7 @@ div#post
 
 .highlight
   font-family: 'Monaco', 'Courier New', 'Terminal', 'monospace'
+  color: #D0D0D0
   font-size: 14px
   pre
     padding: 15px
